img spacing on roundEnd solved

--- a/scss/_roundset.scss
+++ b/scss/_roundset.scss
@@ -1,17 +1,18 @@
 .roundModal {
     background-color: #000000bf;
-    height: 60%;
+    height: 70%;
     width: 80%;
     color:white;
+    top: 10%;
      //top: -200%;
+     
    position: fixed;  
    border-style: ridge;
    border:rgb(255, 255, 255) 5px ridge;
    padding: 20px;
    margin: 20px;    
    display: flex;
-   flex-direction: column;
-}
+   flex-direction: column;}
 .headings {
     display: flex;
     justify-content: space-around;
@@ -27,15 +28,14 @@
     font-size: x-large;    
     margin-top: 2rem;
 }
-
-.roundModal img {
-    width: 50%;
-    
+#plusImg, #minusImg {
+    width: 100px;
+    min-width: 54px;
 }
 .progress {
     padding: 2px;
-    width: 100%;
-    max-width: 500px;
+    width: 50%;
+    max-width: 100%;
     background: transparent;
     border: 2px solid #c4a728;
     border-radius: 20px;
@@ -83,6 +83,6 @@
     width: 75%;
 }
 .theBar {
-    width: 15%;
+    width: 20%;
     top:0;
 }
